Fix lists alignment

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -206,42 +206,27 @@ div {
 /* Question Excerpt */
 
 .component-question-excerpt div {
-  flex-direction: row;
+  font-size: 13px;
   margin-bottom: 15px;
-}
-
-.component-question-excerpt div ol,
-.component-question-excerpt div ul {
-  list-style: none;
-  display: flex;
-}
-
-.component-question-excerpt div ol li,
-.component-question-excerpt div ul li {
-  padding-left: 5px;
-}
-
-.component-question-excerpt div p {
-  font-weight: 300;
-}
-
-.component-question-excerpt div p i {
-  font-style: normal;
+  word-break: break-all;
 }
 
 /* PostText */
 
 .component-post-text div {
   margin-bottom: 15px;
+  line-height: 1.3;
+  word-break: break-all;
 }
 
 .component-post-text p {
-  margin-bottom: 5px;
+  margin-bottom: 15px;
+  line-height: 1.3;
 }
 
-.component-post-text div ol li,
-.component-post-text div ul li {
-  list-style-position: inside;
+.component-post-text div ul,
+.component-post-text div ol {
+  margin-left: 16px;
 }
 
 .component-post-text div p a {
@@ -459,16 +444,15 @@ form button:hover {
 .ck-content p {
   font-size: 16px;
   opacity: 1;
-  list-style-position: inside;
 }
 
 .ck-content p strong {
   font-weight: bold;
 }
 
-.ck-content ol li,
-.ck-content ul li {
-  list-style-position: inside;
+.ck-content ol,
+.ck-content ul {
+  margin-left: 16px;
 }
 
 #editor-description {
